--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,10 @@ body {
   font-family: "Condiment", cursive;
   font-family: "Inria Sans", sans-serif;
   font-family: "Roboto Mono", monospace;
-  background-color: #e8e4e3;
+  /* background-color: #e8e4e3; */
+  background-image: url("https://images.pexels.com/photos/127160/pexels-photo-127160.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+  /* background-repeat: no-repeat; */
+  background-size: cover;
 }
 
 .App {
@@ -19,7 +22,7 @@ body {
   border-radius: 0.3rem;
   padding: 0.2rem 0.5rem;
   font-size: large;
-  background-color: #aaa3ab;
+  background-color: #ea9abb;
 }
 
 .lowerArea {
@@ -37,7 +40,7 @@ body {
   border: 1px solid black;
   margin: 1rem 0rem;
   border-radius: 0.5rem;
-  background-color: #aaa3ab;
+  background-color: #ea9abb;
 }
 
 .name {
